Created test for ALPHINDEX and fixed logic for is null queries on nested documents